--- a/package.json
+++ b/package.json
@@ -1,34 +1,18 @@
 {
-  "name": "ems-copilot-frontend",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build --turbopack",
-    "start": "next start",
-    "lint": "eslint"
-  },
-  "dependencies": {
-    "@tanstack/react-query": "^5.90.5",
-    "@tanstack/react-query-devtools": "^5.90.2",
-    "axios": "^1.13.0",
-    "framer-motion": "^12.23.24",
-    "lottie-react": "^2.4.1",
-    "lucide-react": "^0.546.0",
-    "next": "15.5.4",
-    "react": "19.1.0",
-    "react-dom": "19.1.0"
-  },
-  "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
-    "@types/axios": "^0.9.36",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.5.4",
-    "tailwindcss": "^4",
-    "typescript": "^5"
+    "name": "ems-copilot-frontend",
+    "private": true,
+    "workspaces": [
+      "apps/*",
+      "packages/*"
+    ],
+    "devDependencies": {
+      "turbo": "^2.0.0"
+    },
+    "scripts": {
+      "dev:paramedic": "turbo run dev --filter=paramedic",
+      "dev:hospital": "turbo run dev --filter=hospital",
+      "build": "turbo run build",
+      "lint": "turbo run lint"
+    }
   }
-}
+  
