fix: add packageManager field for Vercel

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "name": "ems-copilot-frontend",
     "private": true,
+    "packageManager": "npm@11.6.0",
     "workspaces": [
         "apps/*",
         "packages/*"
