--- a/apps/hospital/tsconfig.json
+++ b/apps/hospital/tsconfig.json
@@ -8,7 +8,7 @@
       "strict": true,
       "esModuleInterop": true,
       "allowJs": true,
-      "baseUrl": "./src",
+      "baseUrl": "src",
       "paths": {
         "@/*": ["*"]
       },
@@ -19,7 +19,8 @@
       "incremental": true,
       "resolveJsonModule": true,
       "isolatedModules": true,
-      "plugins": [{ "name": "next" }]
+      "plugins": [{ "name": "next" }],
+      "typeRoots": ["./node_modules/@types", "./src/types"],
     },
     "include": [
       "src",
