--- a/apps/paramedic/tsconfig.json
+++ b/apps/paramedic/tsconfig.json
@@ -23,7 +23,7 @@
     /* 경로 alias 설정 */
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["src/*"]
     },
 
     /* 빌드 관련 */
