--- a/apps/hospital/tsconfig.json
+++ b/apps/hospital/tsconfig.json
@@ -25,7 +25,8 @@
     "include": [
       "src",
       "../../node_modules/next/types/**/*.ts",
-      ".next/types/**/*.ts"
+      ".next/types/**/*.ts",
+      "types/**/*.d.ts"
     ],
     "exclude": ["node_modules"]
   }
