--- a/apps/hospital/package.json
+++ b/apps/hospital/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query-devtools": "^5.90.2",
     "lucide-react": "^0.546.0",
     "next": "^14.2.3",
     "react": "^18.3.1",
