--- a/apps/hospital/package.json
+++ b/apps/hospital/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@tanstack/react-query-devtools": "^5.90.2",
+    "axios": "^1.13.1",
+    "framer-motion": "^12.23.24",
     "lucide-react": "^0.546.0",
     "next": "^14.2.3",
     "react": "^18.3.1",
